z-index fix, new media queries

--- a/src/style.css
+++ b/src/style.css
@@ -71,6 +71,7 @@ body {
 	top: 0;
 	transition: top 0.3s;
 	max-width: 100vw;
+	z-index: 1;
 }
 
 .nav-item {
@@ -378,7 +379,7 @@ li a {
 	}
 
 	.work-separation {
-		padding-top: 3vh;
+		padding-top: 5vh;
 	}
 
 	.contact-right {
@@ -418,18 +419,45 @@ li a {
 	}
 }
 
-@media(min-width: 539px) and (max-width: 614px) {
-	.portrait {
-		width: 30vw;
-		height: auto;
+
+@media (max-height: 745px) and (max-width: 767px) {
+	.greeting {
+		font-size: 20px;
 	}
 
-	#work {
-		height: 146vh;
+	.ul-skills li {
+		font-size: 13px;
+	}
+
+	.portrait {
+		width: 30vw;
+	}
+
+	.about-left {
+		height: 75vh;
+		padding: 10% 0 0 10%;
+	}
+
+	.about-right {
+		height: 25vh;
+		background: linear-gradient(white, #73CFDA)
+	}
+
+	#work p {
+		font-size: 13px;
 	}
 
 	.work-left {
-		height: 70vh;
+		height: 50vh;
+	}
+
+	.work-right {
+		height: 76vh;
+	}
+
+	#desktop-mockup {
+		width: 70vw;
+		height: auto;
 	}
 
 	#phone-mockup {
@@ -437,9 +465,29 @@ li a {
 		height: auto;
 	}
 
+	.worktext {
+		margin-left: 5vw;
+	}
+
 	#ca {
 		width: 20vw;
 		height: auto;
+	}
+
+	.work-separation {
+	    padding-top: 5vh;
+	}
+
+	.worktext {
+		margin-left: 0px;
+	}
+
+	.work-left-content h1, .work-right-content h1 {
+		font-size: 20px;
+	}
+
+	.work-ul {
+		font-size: 13px;
 	}
 }
 
@@ -461,6 +509,35 @@ li a {
 	#desktop-mockup {
 		width: 65vw;
 		height: auto;
+	}
+
+	#phone-mockup {
+		width: 20vw;
+		height: auto;
+	}
+
+	#ca {
+		width: 20vw;
+		height: auto;
+	}
+}
+
+@media(min-width: 539px) and (max-width: 614px) and (max-height: 720px) {
+	.portrait {
+		width: 30vw;
+		height: auto;
+	}
+
+	#work {
+		height: 135vh;
+	}
+
+	.work-left {
+		height: 60vh;
+	}
+
+	.work-right {
+		height: 75vh;
 	}
 
 	#phone-mockup {
